--- a/JavaScript/Exemplo05Cliente.html
+++ b/JavaScript/Exemplo05Cliente.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/Exemplo05Cliente.css">
+    <script src="https://unpkg.com/imask" defer></script>
     <script src="js/Exemplo05Cliente.js" defer></script>
+    
+
 </head>
 <body>
     <h2 class="titulo-lista-clientes">Lista de Clientes</h2>
